{
    "name": "BallInputControl",
    "maps": [
        {
            "name": "BallMap",
            "id": "2ff82279-88ac-445d-a8bd-4632f37ba69b",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "688eaee0-f829-4625-b5d0-f8181bedac86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseShoot",
                    "type": "Button",
                    "id": "8480f536-8f16-4f44-a03b-a1029e42245a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorLock",
                    "type": "Button",
                    "id": "25d73a67-9e42-4ea5-b9c3-43f8c2a40a6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "UnstoppableShoot",
                    "type": "Button",
                    "id": "2c5bc6ae-30a6-49c9-9f39-951076709662",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f844ad2-82cc-44a9-9fbe-e8bf4cb17015",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0072125-b80c-4895-826b-cae33d770285",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MouseShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f398f48d-cc17-4aa4-8a52-2c099915b5f9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "CursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "157f3366-9d70-44b2-82f1-e87a49a2cdd5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "UnstoppableShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}